format code style

--- a/starter/cloud-starter-nacos/pom.xml
+++ b/starter/cloud-starter-nacos/pom.xml
@@ -12,14 +12,10 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        <dependency>
-            <groupId>io.github.lyh200</groupId>
-            <artifactId>dynamic-tp-common</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>io.github.lyh200</groupId>
-            <artifactId>dynamic-tp-core</artifactId>
+            <artifactId>dynamic-tp-spring-boot-starter-common</artifactId>
         </dependency>
 
         <dependency>
