manage web server thread pool, tomcat, jetty, undertow

--- a/starter/starter-common/pom.xml
+++ b/starter/starter-common/pom.xml
@@ -11,4 +11,10 @@
     <artifactId>dynamic-tp-spring-boot-starter-common</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.github.lyh200</groupId>
+            <artifactId>dynamic-tp-adapter</artifactId>
+        </dependency>
+    </dependencies>
 </project>
