--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     </properties>
 
     <modules>
+        <module>adapter</module>
         <module>core</module>
         <module>common</module>
         <module>starter</module>
@@ -70,6 +71,12 @@
 
     <dependencyManagement>
         <dependencies>
+
+            <dependency>
+                <groupId>io.github.lyh200</groupId>
+                <artifactId>dynamic-tp-adapter</artifactId>
+                <version>${dtp.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>io.github.lyh200</groupId>
