add dtp config file in example project

--- a/example/example-nacos-cloud/src/main/resources/bootstrap.yml
+++ b/example/example-nacos-cloud/src/main/resources/bootstrap.yml
@@ -13,3 +13,7 @@ spring:
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         file-extension: yml
+        extension-configs:
+          - dataId: ${spring.application.name}-dtp-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+            group: DEFAULT_GROUP
+        refresh-enabled: true
