--- a/example/example-nacos/src/main/resources/application.yml
+++ b/example/example-nacos/src/main/resources/application.yml
@@ -13,7 +13,7 @@ nacos:
   config:
     server-addr: 127.0.0.1:8848
     type: yaml
-    data-ids: dynamic-tp-nacos-demo-dev.yml
+    data-ids: dynamic-tp-nacos-demo-dev.yml,dynamic-tp-nacos-demo-dtp-dev.yml
     auto-refresh: true
     group: DEFAULT_GROUP
     bootstrap:
