支持spring-cloud-starter-zookeeper-config应用接入

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -8,6 +8,7 @@
         <module>example-nacos-cloud</module>
         <module>example-apollo</module>
         <module>example-zookeeper</module>
+        <module>example-zookeeper-cloud</module>
     </modules>
 
     <parent>
