--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -22,6 +22,7 @@
         <module>starter-nacos</module>
         <module>cloud-starter-nacos</module>
         <module>starter-zookeeper</module>
+        <module>cloud-starter-zookeeper</module>
     </modules>
 
     <dependencies>
