--- a/example/example-nacos-cloud/src/main/resources/bootstrap.yml
+++ b/example/example-nacos-cloud/src/main/resources/bootstrap.yml
@@ -16,4 +16,5 @@ spring:
         extension-configs:
           - dataId: ${spring.application.name}-dtp-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
             group: DEFAULT_GROUP
+            refresh: true  # 必须配置，负责自动刷新不生效
         refresh-enabled: true
