support consul config center and add consul application example

--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -23,6 +23,7 @@
         <module>cloud-starter-nacos</module>
         <module>starter-zookeeper</module>
         <module>cloud-starter-zookeeper</module>
+        <module>cloud-starter-consul</module>
     </modules>
 
     <dependencies>
