--- a/example/pom.xml
+++ b/example/pom.xml
@@ -9,6 +9,7 @@
         <module>example-apollo</module>
         <module>example-zookeeper</module>
         <module>example-zookeeper-cloud</module>
+        <module>example-consul-cloud</module>
     </modules>
 
     <parent>
