--- a/example/example-zookeeper/src/main/resources/application.yml
+++ b/example/example-zookeeper/src/main/resources/application.yml
@@ -8,9 +8,8 @@ spring:
     tp:
       config-type: properties # zookeeper只支持properties配置
       zookeeper:
-        config-version: 1.0.0
         zk-connect-str: 127.0.0.1:2181
-        root-node: /configserver/userproject
+        root-node: /configserver/dev
         node: dynamic-tp-zookeeper-demo
 
 
