zk support json

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -49,6 +49,16 @@
             <artifactId>transmittable-thread-local</artifactId>
             <version>2.12.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
