--- a/adapter/pom.xml
+++ b/adapter/pom.xml
@@ -37,6 +37,14 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>3.0.7</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
             <groupId>io.github.lyh200</groupId>
             <artifactId>dynamic-tp-common</artifactId>
         </dependency>
